--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "oysterdb",
-  "version": "0.0.1",
+  "name": "oyster-db",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "3adly <ahmed1el1adly@gmail.com>",
   "license": "ISC",
@@ -16,5 +16,9 @@
     "nanoid": "^3.3.4",
     "nanotimer": "^0.3.15",
     "qantra-pineapple": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.2.3",
+    "jest": "^29.3.1"
   }
 }
